2011-01-04  Jeff Segars  <jeff@webempoweredchurch.org>

	* Follow-up to #15853: Make admin panel styling more bulletproof and remove duplicate styles
	* Fixed bug #16906: Link from Install Tool to User Settings should make User Settings active in the module menu (Thanks to Georg Ringer)

2011-01-03  Jigal van Hemert  <jigal@xs4all.nl>

	* Follow-up to #16780: PHP warning in any system BE module

2011-01-03  Jigal van Hemert  <jigal@xs4all.nl>

	* Fixed bug #15712: Headline in non latin charsets will break after 100 - substr is not multibyte safe
	* Fixed bug #16707: Read from and write to same file hangs GM on network file system

2011-01-01  Oliver Hader  <oliver.hader@typo3.org>

	* Follow-up to bug #16846: Allow external objects to modify the remapAction stack

2011-01-01  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #16308: displayEditIcons expects array, null given (Thanks to Daniel Müller)

2010-12-31  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #16231: Mail not sent if safe mode is on (Thanks to Boris Gulay)

2010-12-30  Steffen Gebert  <steffen@steffen-gebert.de>

	* Added feature #16580: render-postProcess Hook in t3lib_PageRenderer::render() (Thanks to Morton Jonuschat)
	* Fixed bug #13245: Render Access Lists settings in be_groups configuration as checkboxes (Thanks to Simon Schaufelberger)

2010-12-30  Christian Kuuhn  <lolli@schwarzbu.ch>

	* Fixed bug #15034: Login to backend fails with IPv6 Address as HTTP_HOST (Thanks to Roland Schenke)
	* Fixed bug #10480: Add missing header in auto_respond_msg (Thanks to Christian Buelter)

2010-12-29  Christian Kuuhn  <lolli@schwarzbu.ch>

	* Fixed bug #16849: [Unit tests] fixPermissions* tests rely on availability of posix_getegid() (Thanks to Steffen Gebert)
	* Fixed bug #11286: Caching of pagesections uses superfluos serialize() call (Thanks to Rupert Germann)

2010-12-28  Christian Kuuhn  <lolli@schwarzbu.ch>

	* Fixed bug #16840: Remove misc/ directory and deprecate t3lib_superadmin
