@@ -2,6 +2,7 @@
 
 	* Follow-up to #15853: Make admin panel styling more bulletproof and remove duplicate styles
 	* Fixed bug #16906: Link from Install Tool to User Settings should make User Settings active in the module menu (Thanks to Georg Ringer)
+	* Fixed bug #15466: meaningfulTempFilePrefix does not convert Umlauts and special characters (Thanks to Sebastian Michaelsen)
 
 2011-01-03  Jigal van Hemert  <jigal@xs4all.nl>
 
